# satguard

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  KNOWN_ISSUES.md  LICENSE  Makefile  README.md  STATUS.md  bench_fleet.py  pyproject.toml  verified-deps.toml
.github/workflows/: ci.yml
examples/: fleet.yaml
src/satguard/: __init__.py
src/satguard/alert/: __init__.py  rules.py  webhook.py
src/satguard/api/: __init__.py  app.py  cache.py
src/satguard/assess/: alfano.py  chan.py  foster.py
src/satguard/catalog/: celestrak.py  spacetrack.py  tle.py
src/satguard/cdm/: writer.py
src/satguard/cli/: main.py
src/satguard/covariance/: realism.py
src/satguard/fleet/: __init__.py  batch.py  parser.py
src/satguard/history/: __init__.py  evolution.py  replay.py  store.py
src/satguard/maneuver/: __init__.py  cw.py  planner.py
src/satguard/propagate/: sgp4.py
src/satguard/report/: __init__.py  pdf.py
src/satguard/screen/: screener.py  vectorized.py
tests/: test_alert.py  test_api.py  test_cdm.py  test_celestrak.py  test_collision_prob.py  test_covariance.py  test_covariance_realism.py  test_fleet.py  test_history.py  test_maneuver.py  test_propagation.py  test_property.py  test_replay.py  test_screening.py  test_smoke.py  test_smoke_v02.py  test_spacetrack.py  test_tle_parser.py  test_v04_audit.py  test_validation.py
tests/snapshots/: golden_smoke.txt
verify/: cw_comparison.py
web/: index.html  package-lock.json  package.json  vite.config.ts
web/src/: App.css  App.tsx  main.tsx  types.ts  vite-env.d.ts
web/src/components/: ConjunctionBrowser.tsx  ConjunctionOverlay.tsx  (+5 more)
(+2 files in other folders)
